# ChangeLog for sys-apps/tcp-wrappers
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.33 2004/07/17 01:28:13 mr_bones_ Exp $

  16 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  error check sed; use emake; modify Makefile to make parallel-friendly

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  tcp-wrappers-7.6-r3.ebuild, tcp-wrappers-7.6-r4.ebuild,
  tcp-wrappers-7.6-r6.ebuild, tcp-wrappers-7.6-r8.ebuild:
  virtual/glibc -> virtual/libc

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> tcp-wrappers-7.6-r6.ebuild:
  QA - fix use invocation

  09 Apr 2004; Travis Tilley <lv@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  stable on amd64

  29 Mar 2004; <randy@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  adding s390 keywords

  09 Mar 2004; <agriffis@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  stable on alpha and ia64

  07 Mar 2004; Joshua Kinard <kumba@gentoo.org> tcp-wrappers-7.6-r3.ebuild,
  tcp-wrappers-7.6-r4.ebuild, tcp-wrappers-7.6-r8.ebuild:
  Marked stable on mips, copyright header fixes.

  09 Feb 2004; <gustavoz@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  stable on sparc

  09 Feb 2004; Guy Martin <gmsoft@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  Marked stable on hppa.

  08 Feb 2004; Martin Schlemmer <azarah@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  Bump to stable for x86.

  10 Jan 2004; Aron Griffis <agriffis@gentoo.org> tcp-wrappers-7.6-r6.ebuild:
  stable on alpha

  28 Dec 2003; Joshua Kinard <kumba@gentoo.org> tcp-wrappers-7.6-r6.ebuild:
  Move to mips stable (~mips -> mips)

*tcp-wrappers-7.6-r8 (28 Dec 2003)

  28 Dec 2003; Martin Schlemmer <azarah@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  Move libwrap.a to /usr/lib/ where it belongs.

*tcp-wrappers-7.6-r7 (21 Dec 2003)

  21 Dec 2003; Robin H. Johnson <robbat2@gentoo.org>
  tcp-wrappers-7.6-r7.ebuild:
  move libs from /usr/lib to /lib, per bug 27064
