@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/tcp-wrappers
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.33 2004/07/17 01:28:13 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.34 2004/12/13 16:05:03 vapier Exp $
+
+  13 Dec 2004; Mike Frysinger <vapier@gentoo.org>
+  tcp-wrappers-7.6-r8.ebuild:
+  Fix cross-compiling and remove USE=static ... always build shared libraries.
 
   16 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
   tcp-wrappers-7.6-r8.ebuild:
